Fix : Vertical screens overflow

--- a/packages/client/src/components/Button/Button.module.scss
+++ b/packages/client/src/components/Button/Button.module.scss
@@ -56,7 +56,7 @@ $padding-inline: 24px;
         background-color: colors.$grey-light;
       }
 
-      &:active {
+      &:not([disabled]):active {
         background-color: var(--color, darken(colors.$primary, 10%));
       }
     }
