--- a/packages/client/src/index.scss
+++ b/packages/client/src/index.scss
@@ -6,6 +6,7 @@ html {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  max-height: 100vh;
   height: -webkit-fill-available;
 }
 
